# cuda-config

./: .gitignore  .travis.yml  LICENSE  README.md  cuda-config.cabal  cuda-helper.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
src/Foreign/CUDA/: Config.hs
