name:           cuda-config
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tmcdonell/cuda#readme>
homepage:       https://github.com/tmcdonell/cuda-config#readme
bug-reports:    https://github.com/tmcdonell/cuda-config/issues
author:         Trevor L. McDonell
maintainer:     Trevor L. McDonell <trevor.mcdonell@gmail.com>
copyright:      [2019] Trevor L. McDonell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  1.12

extra-source-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
      Foreign.CUDA.Config

  other-modules:
      Paths_cuda_config

  hs-source-dirs:
      src

  build-depends:
      base              >= 4.7 && < 5
    , Cabal
    , directory         >= 1.0
    , filepath          >= 1.0

  ghc-options:
      -Wall
      -fwarn-tabs

  default-language: Haskell2010

source-repository head
  type:         git
  location:     https://github.com/tmcdonell/cuda-config

source-repository head
  type:         git
  location:     https://github.com/tmcdonell/cuda-config
  tag:          v0.1.0.0

-- vim: nospell
