name:           cuda-helper
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tmcdonell/cuda#readme>
homepage:       https://github.com/tmcdonell/cuda-helper#readme
bug-reports:    https://github.com/tmcdonell/cuda-helper/issues
author:         Trevor L. McDonell
maintainer:     Trevor L. McDonell <trevor.mcdonell@gmail.com>
copyright:      [2019] Trevor L. McDonell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  1.12

extra-source-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
      Foreign.CUDA.Config

  other-modules:
      Paths_cuda_helper

  hs-source-dirs:
      src

  build-depends:
      base              >= 4.7 && < 5
    , Cabal             >= 1.24
    , directory         >= 1.0
    , filepath          >= 1.0

  ghc-options:
      -Wall
      -fwarn-tabs

  default-language: Haskell2010

source-repository head
  type:         git
  location:     https://github.com/tmcdonell/cuda-helper

source-repository head
  type:         git
  location:     https://github.com/tmcdonell/cuda-helper
  tag:          v0.1.0.0

-- vim: nospell
